refactor: prefer enum over magic string